[package]
name = "milenage"
version = "0.1.0"
authors = ["Olivier Le Moal <mail@olivierlemoal.fr>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/olivierlemoal/milenage-rs/"
description = "MILENAGE Algorithm Set"
keywords = ["telecom", "lte", "eutran", "epc", "security"]
categories = ["authentication", "cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex-literal = "0.2.1"
aes = "0.3.2"
aes-soft = "0.3.3"
block-modes = "0.3.3"
