[package]
name = "milenage"
version = "0.1.2"
authors = ["Olivier Le Moal <mail@olivierlemoal.fr>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/olivierlemoal/milenage-rs/"
description = "MILENAGE Algorithm Set"
keywords = ["telecom", "lte", "eutran", "epc", "security"]
categories = ["authentication", "cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex-literal = "0.3.1"
aes = "0.6.0"
aes-soft = "0.6.4"
block-modes = "0.7.0"
sha2 = "0.9.3"
hmac = "0.10.1"
