[package]
name = "milenage"
version = "0.1.4"
authors = ["Olivier Le Moal <mail@olivierlemoal.fr>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/olivierlemoal/milenage-rs/"
description = "MILENAGE Algorithm Set"
keywords = ["telecom", "lte", "eutran", "epc", "security"]
categories = ["authentication", "cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex-literal = "0.3.1"
sha2 = "0.9.3"
hmac = "0.10.1"
openssl = { version = "0.10", optional = true }
aes = { version = "0.6.0", optional = true }
aes-soft = { version = "0.6.4", optional = true }
block-modes = { version = "0.7.0", optional = true }

[features]
default = ["aes"]
openssl = ["dep:openssl"]
aes = ["dep:aes", "dep:aes-soft", "dep:block-modes"]
